# drizzle-dumper-rust

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  README.md
.github/workflows/: android-arm64.yml  zygisk-module.yml
src/: clear_cache.rs  cli.rs  config.rs  error.rs  frida_gadget.rs  frida_hook.rs  lib.rs  main.rs  mcp.rs  ptrace.rs  signals.rs  workflow.rs
src/dex/: header.rs  kind.rs  mod.rs  output.rs
src/mcp/: auth.rs
src/ptrace/: guard.rs  mod.rs  output.rs  remote.rs  scanner.rs
zygisk/: README.md  module.prop  sepolicy.rule  service.sh
zygisk/config/: mcp_bind  package_custom.list  targets.json
zygisk/include/: zygisk.hpp
zygisk/src/: Android.bp  CMakeLists.txt  module.cpp
zygisk/webroot/: app.js  index.html  styles.css
