[package]
name = "drizzle_dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1"
nix = { version = "0.28", default-features = false, features = ["ptrace", "process", "signal", "user"] }
procfs = { version = "0.16", default-features = false }
sha1 = "0.10"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
mcp-protocol-sdk = { version = "0.5", features = ["http"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
futures-util = "0.3"
tracing = "0.1"
rand = "0.8"

[dev-dependencies]
tower = "0.5"

[profile.release]
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
