[package]
name = "drizzle_dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1"
nix = { version = "0.28", default-features = false, features = ["ptrace", "process", "signal", "user"] }
procfs = { version = "0.16", default-features = false }
sha1 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
mcp-protocol-sdk = { version = "0.5", features = ["http"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
futures-util = "0.3"
tracing = "0.1"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
frida = { git = "https://github.com/frida/frida-rust", rev = "17.4.1", optional = true }
goblin = { version = "0.9", optional = true }

[dev-dependencies]
tower = "0.5"

[features]
default = []
frida = ["dep:frida", "dep:goblin"]
frida-gadget-bundle = ["frida"]

[patch.crates-io]
frida = { git = "https://github.com/frida/frida-rust", rev = "17.4.1" }
frida-sys = { git = "https://github.com/frida/frida-rust", rev = "17.4.1" }

[profile.release]
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
